--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -1,6 +1,6 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/otvoreni-bazen.png)"></div>
-	<div class="pageFixedTitle">BAZENI NA OTVORENOM</div>
+	<div class="pageFixedTitle">БАЗЕНИ НА ОТВОРЕНОМ</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
@@ -8,10 +8,10 @@
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="readingText">Veliki olimpijski bazen dubine 2 metra koji u potpunosti ispunjava standarde svetskih i evropskih plivačkih federacija i namenjen je kako rekreativcima tako i organizaciji domaćih i međunarodnih takmičenja.<br>&nbsp;<br>Drugi bazen spada u kategoriju rekreativnih, dubok je 1,20m i opremljen sadržajima karakterističnim za akvaparkove. Poseduje prelivnu pečurku, tri “lastina repa”, hidromasažni zidni gejzir i centralni gejzir.</div>
+					<div class="readingText">Велики олимпијски базен дубине 2 метра који у потпуности испуњава стандарде светских и европских пливачких федерација и намењен је како рекреативцима тако и организацији домаћих и међународних такмичења.<br>&nbsp;<br>Други базен спада у категорију рекреативних, дубок је 1,20м и опремљен садржајима карактеристичним за аквапаркове. Поседује преливну печурку, три “ластина репа”, хидромасажни зидни гејзир и централни гејзир.</div>
 				</div>
 				<div class="inline">
-					<div class="readingText">Treći i najmanji bazen namenjen je deci. Prilagođena dubina do 20cm i gumirana podloga čine ga maksimalno bezbednim za najmlađe posetioce.<br>&nbsp;<br>Pored uobičajenih pratećih sadržaja – tuševa, svlačionica, na otvorenim bazenima se nalazi i kafe-bar, dok su prostori bazena i bašte kafe-bara snabdeveni suncobranima i ležaljkama.</div>
+					<div class="readingText">Трећи и најмањи базен намењен је деци. Прилагођена дубина до 20цм и гумирана подлога чине га максимално безбедним за најмлађе посетиоце.<br>&nbsp;<br>Поред уобичајених пратећих садржаја – тушева, свлачионица, на отвореним базенима се налази и кафе-бар, док су простори базена и баште кафе-бара снабдевени сунцобранима и лежаљкама.</div>
 				</div>
 			</div>
 		</div>
@@ -19,7 +19,7 @@
 
 	<div class="section grey padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">CENOVNIK</div>
+			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
 					<td>Dnevna karta odrasli - Radni Dan</td>
