--- a/views/besplatni-programi-penzioneri.ejs
+++ b/views/besplatni-programi-penzioneri.ejs
@@ -1,6 +1,6 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/penzioneri.png)"></div>
-	<div class="pageFixedTitle">BESPLATNI PROGRAMI ZA PENZIONERE</div>
+	<div class="pageFixedTitle">БЕСПЛАТНИ ПРОГРАМИ ЗА ПЕНЗИОНЕРЕ</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
@@ -10,10 +10,10 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							PLIVANJE ZA PENZIONERE
+							ПЛИВАЊЕ ЗА ПЕНЗИОНЕРЕ
 						</div>
 						<div class="text">
-							Pripadnici starije populacije sa teritorije Gradske opštine Stari grad, uz personalizovanu karticu <span class="boldBlue">"Stari grad misli na tebe"</span>, mogu besplatno koristiti bazen za rekreativno plivanje.<br>&nbsp;<br>Izdavanje kartice "Stari grad misli na tebe" i prijava za besplatni program plivanja za seniore vrši se u <span class="boldBlue">Uslužnom centru</span> Gradske opštine Stari grad, u zgradi opštine (ulaz iz Nušićeve ulice). Više informacija možete dobiti u Uslužnom centru ili pozivom na broj <span class="boldBlue"><a href="tel:+381800077775">0800 07 77 75</a></span>.
+							Припадници старије популације са територије Градске Општине Стари град, уз персонализовану картицу <span class="boldBlue">"Стари град мисли на тебе"</span>, могу бесплатно користити базен за рекреативно пливанје. <br>&nbsp;<br>Издавање картице "Стари град мисли на тебе" и пријава за бесплатни програм пливања за сениоре врши се у <span class="boldBlue">Услужном центру</span> Градске општине Стари град, у згради општине (улаз из Нушићеве улице). Више информација можете добити у Услужном центру или позивом на број <span class="boldBlue"><a href="tel:+381800077775">0800 07 77 75</a></span>.
 						</div>
 					</div>
 					
@@ -22,9 +22,9 @@
 					<div class="image">
 						<table class="terminiTable">
 							<tr>
-								<td>Ponedeljak</td>
-								<td>Sreda</td>
-								<td>Petak</td>
+								<td>Понедељак</td>
+								<td>Среда</td>
+								<td>Петак</td>
 							</tr>
 							<tr>
 								<td>12:00 - 13:30</td>
@@ -49,10 +49,10 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							Joga za penzionere - TRENUTNO NIJE DOSTUPNO
+							Јога за пензионере - ТРЕНУТНО НИЈЕ ДОСУТПНО
 						</div>
 						<div class="text">
-							Utorkom i četvrtkom u terminima od 10 do 12 časova penzioneri mogu pohađati besplatne časove joge koji imaju pozitivno delovanje na fizičko i mentalno stanje i povećanje životne energije. 
+							Уторком и четвртком у терминима од 10 до 12 часова пензионери могу похађати бесплатне часове јоге који имају позитивно деловање на физичко и ментално стање и повећање животне енергије. 
 						</div>
 					</div>
 					
@@ -67,10 +67,10 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							Kardio fitnes - TRENUTNO NIJE DOSTUPNO
+							Кардио фитнес - ТРЕНУТНО НИЈЕ ДОСТУПНО
 						</div>
 						<div class="text">
-							Ponedeljak, sreda i petak od 10 do 12 časova rezervisani su za kardio fitnes. Ovaj program je pažljivo osmišljen i prilagođen starijoj populaciji koja često nije u mogućnosti da priušti sebi izdatke za ovakvu vrstu aktivnosti.
+							Понедељак, среда и петак од 10 до 12 часова резервисани су за кардио фитнес. Овај програм је пажљиво осмишљен и прилагођен старијој популацији која често није у могућности да приушти себи издатке за овакву врсту активности.
 						</div>
 					</div>
 					
