--- a/views/kombo-paketi.ejs
+++ b/views/kombo-paketi.ejs
@@ -1,18 +1,18 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/kombo.jpg)"></div>
-	<div class="pageFixedTitle">KOMBO PAKETI</div>
+	<div class="pageFixedTitle">КОМБО ПАКЕТИ</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
 	<div class="section white padded">
 		<div class="smallContent" style="text-align: center;">
-			Za potpunu rekreaciju i relaksaciju osmišljeni su COMBO paketi. Ovaj tip ulaznica vam omogućava pristup olimpijskom bazenu, saunskom bloku i teretani, u terminima koje pokriva paket za koji ste se odlučili.
+			За потпуну рекреацију и релаксацију осмишљени су КОМБО пакети. Овај тип улазница вам омогућава приступ олимпијском базену, саунском блоку и теретани, у терминима које покрива пакет за који сте се одлучили.
 		</div>
 	</div>
 
 	<div class="section grey padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">CENOVNIK</div>
+			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
 					<td>Zakup sale 1 sat, radnim danima od 08:00 do 12:00</td>
