--- a/views/o-nama.ejs
+++ b/views/o-nama.ejs
@@ -1,25 +1,34 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/homeHeader.jpg)"></div>
-	<div class="pageFixedTitle">O NAMA</div>
+	<div class="pageFixedTitle">О НАМА</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	<div class="section white">
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="readingText">Čuvena je misao slavnog srpskog arhitekte i akademika Ivana Antića da je jedna građevina lepa samo ako je funkcionalna i ako ne potčinjava sebi ambijent u kome se nalazi, ako sadrži meru i podsvesnu dozu ugrađenih normi, kao i dozu ljubavi prema gradu u kojem je njen autor rođen i gde je odrastao.</div>
+					<!--<div class="readingText">Čuvena je misao slavnog srpskog arhitekte i akademika Ivana Antića da je jedna građevina lepa samo ako je funkcionalna i ako ne potčinjava sebi ambijent u kome se nalazi, ako sadrži meru i podsvesnu dozu ugrađenih normi, kao i dozu ljubavi prema gradu u kojem je njen autor rođen i gde je odrastao.</div>-->
+					<div class="readingText">
+						Чувена је мисао славног српског архитекте и академика Ивана Антића да је једна грађевина лепа само ако је функционална и ако не потчињава себи амбијент у коме се налази, ако садржи меру и подсвесну дозу уграђених норми, као и дозу љубави према граду у којем је њен аутор рођен и где је одрастао.
+					</div>
 				</div>
 				<div class="inline">
-					<div class="readingText">I upravo takvo je njegovo remek-delo, sportsko rekreativni centar 25. Maj - Milan Gale Muškatirović zdanje graciozno i grandiozno u isto vreme, napravljeno sa merom i ljubavlju, u potpunosti prilagođeno svojoj svrsi i savršeno uklopljeno u okruženje u kome se nalazi.</div>
+					<!--<div class="readingText">I upravo takvo je njegovo remek-delo, sportsko rekreativni centar 25. Maj - Milan Gale Muškatirović zdanje graciozno i grandiozno u isto vreme, napravljeno sa merom i ljubavlju, u potpunosti prilagođeno svojoj svrsi i savršeno uklopljeno u okruženje u kome se nalazi.</div>-->
+					<div class="readingText">
+						И управо такво је његово ремек-дело, спортско рекреативни центар 25. Мај - Милан Гале Мушкатировић здање грациозно и грандиозно у исто време, направљено са мером и љубављу, у потпуности прилагођено својој сврси и савршено уклопљено у окружење у коме се налази.
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="section grey padded">
+	<div class="section grey padded" style="background-color:rgb(231,234,237)">
 		<div class="smallContent" style="text-align:center">
-			<div class="readingText">
+			<!--<div class="readingText">
 				A nalazi se baš tamo gde jedan sportsko rekreativni centar i treba da bude: u centru grada, podno Kalemegdana, na obali Dunava, pokraj šetališta, okružen zelenilom i vodom, sa pogledom na Veliko ratno ostrvo i prelepe zalaske sunca iznad Panonije.
+			</div>-->
+			<div class="readingText">
+				А налази се баш тамо где један спортско рекреативни центар и треба да буде: у центру града, подно Калемегдана, на обали Дунава, покрај шеталишта, окружен зеленилом и водом, са погледом на Велико ратно острво и прелепе заласке сунца изнад Паноније.
 			</div>
 		</div>
 	</div>
@@ -28,13 +37,16 @@
 		<script src="/js/map.js?<%=fileVersion%>"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsUyoMs0Ba_6bPbtD5A5_1yOJXjjMYsMQ&amp;callback=initMap" async="" defer=""></script>
         <div class="navButton blueButton">
-        	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">NAVIGACIJA</a>
+        	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">НАВИГАЦИЈА</a>
         </div>
 	</div>
 	<div class="section grey padded">
 		<div class="smallContent" style="text-align:center">
-			<div class="readingText">
+			<!--<div class="readingText">
 				Napravljen pre skoro pola veka za potrebe prvog Svetskog prvenstva u sportovima na vodi i nazvan 25. maj, ovaj centar ubrzo postaje simbol vere u sportski duh i omiljeno prestoničko mesto za rekreaciju. I to ostaje do današnjih dana.
+			</div>-->
+			<div class="readingText">
+				Направљен пре скоро пола века за потребе првог Светског првенства у спортовима на води и назван 25. мај, овај центар убрзо постаје симбол вере у спортски дух и омиљено престоничко место за рекреацију. И то остаје до данашњих дана.
 			</div>
 		</div>
 	</div>
@@ -42,10 +54,16 @@
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="readingText">2005. godine menja ime u SRPC Milan Gale Muškatirović u čast legendarnog srpskog vaterpolo golmana, a nakon podmlađivanja, rekonstrukcije i restauracije 2011. postaje jedan od najmodernijih i najbolje opremljenih objekata ovog tipa u zemlji.</div>
+					<!--<div class="readingText">2005. godine menja ime u SRPC Milan Gale Muškatirović u čast legendarnog srpskog vaterpolo golmana, a nakon podmlađivanja, rekonstrukcije i restauracije 2011. postaje jedan od najmodernijih i najbolje opremljenih objekata ovog tipa u zemlji.</div>-->
+					<div class="readingText">
+						2005. године мења име у СРПЦ Милан Гале Мушкатировић у част легендарног српског ватерполо голмана, а након подмлађивања, реконструкције и рестаурације 2011. постаје један од најмодернијих и најбоље опремљених објеката овог типа у земљи.
+					</div>
 				</div>
 				<div class="inline">
-					<div class="readingText">2019. godine u svoj naziv vraća ime ‘’25. maj’’ i dobija pun naziv “25. maj – Milan Gale Muškatirović” zbog istorijske činjenice da je upravo 25. maja 1847. godine na ovom mestu otvoreno “prvo srpsko kupalište i plivalište”.</div>
+					<!--<div class="readingText">2019. godine u svoj naziv vraća ime ‘’25. maj’’ i dobija pun naziv “25. maj – Milan Gale Muškatirović” zbog istorijske činjenice da je upravo 25. maja 1847. godine na ovom mestu otvoreno “prvo srpsko kupalište i plivalište”.</div>-->
+					<div class="readingText">
+						2019. године у свој назив враћа име ‘’25. мај’’ и добија пун назив “25. мај – Милан Гале Мушкатировић” због историјске чињенице да је управо 25. маја 1847. године на овом месту отворено “прво српско купалиште и пливалиште”.
+					</div>
 				</div>
 			</div>
 		</div>
@@ -56,8 +74,11 @@
 		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
 			<div class="smallContent padded">
 				<div class="whiteBoxTransparent">
-					<div class="readingText">
+					<!--<div class="readingText">
 						Pored tri otvorena bazena i jednog zatvorenog, olimpijskog, u čijem sklopu se nalazi i saunski blok - welness, centar sadrži i salu za dvoranske sportove. U sklopu SRPC funkcionišu razni ugostiteljski objekti - restorani I kafići, dečije igraonice, teretane i drugi razni poslovni objekti.
+					</div>-->
+					<div class="readingText">
+						Поред три отворена базена и једног затвореног, олимпијског, у чијем склопу се налази и саунски блок - њелнесс, центар садржи и салу за дворанске спортове. У склопу СРПЦ функционишу разни угоститељски објекти - ресторани И кафићи, дечије играонице, теретане и други разни пословни објекти.
 					</div>
 				</div>
 			</div>
@@ -68,31 +89,31 @@
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="listTitle">SKUPŠTINA Privrednog društva</div>
+					<div class="listTitle">СКУПШТИНА Привредног Друштва</div>
 					<ul class="list">
-						<li><p>Nemanja Marijan, <span class="smallItalic">predsednik</span></p></li>
-						<li><p>Nikola Aritonović, <span class="smallItalic">član</span></p></li>
-						<li><p>Ana Popović, <span class="smallItalic">član</span></p></li>
+						<li><p>Немања Маријан, <span class="smallItalic">председник</span></p></li>
+						<li><p>Nikola Aritonović, Никола Артиновић, <span class="smallItalic">члан</span></p></li>
+						<li><p>Ана Поповић, <span class="smallItalic">члан</span></p></li>
 					</ul>
 				</div>
 				<div class="inline">
-					<div class="listTitle">UPRAVA Privrednog društva</div>
+					<div class="listTitle">УПРАВА Привредног Друштва</div>
 					<ul class="list">
-						<li><p>Miloš Milić, <span class="smallItalic">direktor</span></p></li>
-						<li><p>Snežana Đurić, <span class="smallItalic">zamenik direktora</span></p></li>
-						<li><p>Dragan Vorotović, <span class="smallItalic">pomoćnik direktora</span></p></li>
-						<li><p>Predrag Peruničić, <span class="smallItalic">savetnik direktora</span></p></li>
+						<li><p>Милош Милић, <span class="smallItalic">директор</span></p></li>
+						<li><p>Снежана Ђурић, <span class="smallItalic">заменик директора</span></p></li>
+						<li><p>Драган Воротовић, <span class="smallItalic">помоћник директора</span></p></li>
+						<li><p>Предраг Перуничић, <span class="smallItalic">саветник директора</span></p></li>
 					</ul>
 				</div>
 			</div>
 			<div class="sideBySideText" style="text-align:center">
 				<div class="inline">
-					<div class="listTitle" style="text-align:left">Direktori Sektora u Privrednom društvu</div>
+					<div class="listTitle" style="text-align:left">ДИРЕКТОРИ Сектора у Привредном Друштву</div>
 					<ul class="list" style="text-align:left">
-						<li><p>Svetlana Jordanov, <span class="smallItalic">direktor sektora za ekonomske poslove</span></p></li>
-						<li><p>Nataša Konjević, <span class="smallItalic">direktor sektora za pravne poslove</span></p></li>
-						<li><p>Igor Dolović, <span class="smallItalic">direktor sektora održavanja objekata</span></p></li>
-						<li><p>Nenad Vujović, <span class="smallItalic">direktor sektora prodaje i sporta</span></p></li>
+						<li><p>Светлана Јорданов, <span class="smallItalic">директор сектора ѕа економске послове</span></p></li>
+						<li><p>Наташа Коњевић, <span class="smallItalic">директор сектора ѕа правне послове</span></p></li>
+						<li><p>Игор Доловић, <span class="smallItalic">директор сектора одржавања објеката</span></p></li>
+						<li><p>Ненад Вујовић, <span class="smallItalic">директор сектора продаје и спорта</span></p></li>
 					</ul>
 				</div>
 			</div>
