--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 		</div><!--class:pageContent-->
 		<div class="footer padded">
-			<div class="text">Sportsko rekreativni centar Milan Gale Muškatirović</div>
-			<div class="copyright">&copy; <span id="copyright-year"></span> - Sva prava zadržana.</div>
+			<div class="text">Спортско Рекреативни Центар Милан Гале Мушкатировић</div>
+			<div class="copyright">&copy; <span id="copyright-year"></span> - Сва права задржана.</div>
 			<script>
 				document.getElementById("copyright-year").innerHTML	=	new Date().getFullYear() + ".";
 			</script>
