--- a/views/sportska-sala.ejs
+++ b/views/sportska-sala.ejs
@@ -1,20 +1,20 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/sportska-sala.png)"></div>
-	<div class="pageFixedTitle">SPORTSKA SALA</div>
+	<div class="pageFixedTitle">СПОРТСКА САЛА</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
 	<div class="section white padded">
 		<div class="smallContent" style="text-align: center;">
-			Posetiocima i korisnicima usluga centra na raspolaganju je i sportska sala opremljena po najvišim standardima i pogodna kako za sportske aktivnosti i pripreme profesionalnih sportista, tako i za rekreativne aktivnosti.<br>
-OD 05 MAJA 2020. GODINE, SPROTSKA SALA U OKVIRU SRPC 25. MAJ RADI DO 22 ČASA.<br>
-Kontakt telefon: <a href="">062/887-5704</a>
+			Посетиоцима и корисницима услуга центра на располагању је и спортска сала опремљена по највишим стандардима и погодна како за спортске активности и припреме професионалних спортиста, тако и за рекреативне активности.<br>
+ОД 05 МАЈА 2020. ГОДИНЕ, СПРОТСКА САЛА У ОКВИРУ СРПЦ 25. МАЈ РАДИ ДО 22 ЧАСА.<br>
+Контакт телефон: <a href="">062/887-5704</a>
 		</div>
 	</div>
 
 	<div class="section grey padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">CENOVNIK</div>
+			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
 					<td>Zakup sale 1 sat, radnim danima od 08:00 do 12:00</td>
