--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -1,6 +1,6 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/welness.jpeg)"></div>
-	<div class="pageFixedTitle" style="top:500px;">WELLNESS CENTAR</div>
+	<div class="pageFixedTitle" style="top:500px;"><i>WELLNESS</i> ЦЕНТАР</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
@@ -8,15 +8,15 @@
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="readingText">U sklopu wellness centra nalaze se: saunski blok sa jednom ruskom (sauna sa vlažnim vazduhom),  jednom finskom (sauna sa suvim vazduhom) i jednom infracrvenom saunom, zatim tepidarijum, tuševi i mali bazen dimenzija 12 x 8 metara namenjen rashlađivanju nakon i između saunskih sesija. Saunski blok dostupan je besplatno za decu do 4 godine.</div>
+					<div class="readingText">У склопу њеллнесс центра налазе се: саунски блок са једном руском (сауна са влажним ваздухом),  једном финском (сауна са сувим ваздухом) и једном инфрацрвеном сауном, затим тепидаријум, тушеви и мали базен димензија 12 џ 8 метара намењен расхлађивању након и између саунских сесија. Саунски блок доступан је бесплатно за децу до 4 године.</div>
 				</div>
 				<div class="inline">
 					<div class="readingText">
-						<div>Radno vreme Wellness Centra:</div>
+						<div>Радно Време <i>Wellness</i> Центра:</div>
 						<table class="terminiTable">
 							<tr>
-								<td>Radni Dan</td>
-								<td>Vikend</td>
+								<td>Радни Дан</td>
+								<td>Викенд</td>
 							</tr>
 							<tr>
 								<td>18:00 - 22:00</td>
@@ -31,7 +31,7 @@
 
 	<div class="section grey padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">CENOVNIK</div>
+			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
 					<td>Spa premium - Mesečna karta za saunu i mali bazen - 30 termina</td>
