--- a/views/besplatni-programi-deca.ejs
+++ b/views/besplatni-programi-deca.ejs
@@ -1,6 +1,6 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/deca.png)"></div>
-	<div class="pageFixedTitle">BESPLATNI PROGRAMI ZA DECU</div>
+	<div class="pageFixedTitle">БЕСПЛАТНИ ПРОГРАМИ ЗА ДЕЦУ</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
@@ -10,14 +10,17 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							BESPLATNA ŠKOLA PLIVANJA I VATERPOLA
+							БЕСПЛАТНА ШКОЛА ПЛИВАЊА И ВАТЕРПОЛА
 						</div>
-						<div class="text">
+						<!--<div class="text">
 							Gradska opština Stari grad u saradnji sa VK Dorćol i VK Stari grad organizuje tokom leta Besplatnu školu plivanja i vaterpola za decu uzrasta od 5 do 15 godina sa teritorije Gradske opštine Stari grad.
+						</div>-->
+						<div class="text">
+							Градска општина Стари град у сарадњи са ВК Дорћол и ВК Стари град организује током лета Бесплатну школу пливања и ватерпола за децу узраста од 5 до 15 година са територије Градске општине Стари град.
 						</div>
 						<div class="padded" style="text-align: center;">
 							<div class="blueButton">
-								<a href="#">OPŠIRNIJE</a>
+								<a href="#">ОПШИРНИЈЕ</a>
 							</div>
 						</div>
 					</div>
@@ -43,10 +46,13 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							SREDA - ĐAČKI DAN
+							СРЕДА - ЋАЧКИ ДАН
 						</div>
-						<div class="text">
+						<!--<div class="text">
 							SRPC 25. maj - Milan Gale Muškatirović u saradnji sa Sekretarijatom za sport i omladinu grada Beograda, organizuje đački dan na otvorenim bazenima tokom trajanja letnje sezone. Svi učenici osnovnih i srednjih škola sa teritorije grada Beograda mogu uz posedovanje đačke knjižice besplatno koristiti otvoreni bazen 25. maj svake srede.
+						</div>-->
+						<div class="text">
+							СРПЦ 25. мај - Милан Гале Мушкатировић у сарадњи са Секретаријатом за спорт и омладину града Београда, организује ђачки дан на отвореним базенима током трајања летње сезоне. Сви ученици основних и средњих школа са територије града Београда могу уз поседовање ђачке књижице бесплатно користити отворени базен 25. мај сваке среде.
 						</div>
 					</div>
 					
@@ -61,10 +67,13 @@
 				<div class="textWrap">
 					<div class="content">
 						<div class="title">
-							BESPLATNA ŠKOLA PLIVANJA (popunjeni termini)
+							БЕПСЛАТНА ШКОЛА ПЛИВАЊА (попуњени термини)
 						</div>
-						<div class="text">
+						<!--<div class="text">
 							Generacije Beograđana naučile su da plivaju upravo na bazenima “25. maja”. Nastavljajući tu tradiciju SRPC 25. maj - Milan Gale Muškatirović u saradnji sa Sekretarijatom za sport i omladinu grada Beograda, organizovao je besplatnu letnju školu plivanja za najmlađe. Prijave se vrše na recepciji Bazena 25. maj
+						</div>-->
+						<div class="text">
+							Генерације Београђана научиле су да пливају управо на базенима “25. маја”. Настављајући ту традицију СРПЦ 25. мај - Милан Гале Мушкатировић у сарадњи са Секретаријатом за спорт и омладину града Београда, организовао је бесплатну летњу школу пливања за најмлађе. Пријаве се врше на рецепцији Базена 25. мај
 						</div>
 					</div>
 					
@@ -73,10 +82,10 @@
 					<div class="image">
 						<table class="terminiTable">
 							<tr>
-								<td>Ponedeljak</td>
-								<td>Utorak</td>
-								<td>Četvrtak</td>
-								<td>Petak</td>
+								<td>Понедељак</td>
+								<td>Уторак</td>
+								<td>Четвртак</td>
+								<td>Петак</td>
 							</tr>
 							<tr>
 								<td>09:00 - 10:00</td>
