--- a/views/javne-nabavke.ejs
+++ b/views/javne-nabavke.ejs
@@ -1,75 +1,75 @@
 <%- include ("partials/header") -%>
 	<div class="contentWidth">
-		<div class="sectionTitle">JAVNE NABAVKE</div>
+		<div class="sectionTitle">ЈАВНЕ НАБАВКЕ</div>
 		<div class="nabavke">
 			<div class="nabavka">
 				<div class="year">2022.</div>
-				<div class="listTitle">*JAVNA NABAVKA 01/22 Hemijska sredstva  za dezinfekciju i održavanje bazenske vode</div>
+				<div class="listTitle">*ЈАВНА НАБАВКА 01/22 Хемијска средства за дезинфекцију и одржавање базенске воде</div>
 				<ul class="list">
-					<li><p>Javni poziv (10.02.2022.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora JN 01/22 (28.02.2022.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o dodeli ugovora JN 01/22 (21.03.2022.)  - <a href="#" class="link">link</a></p></li>
+					<li><p>Јавни позив (10.02.2022.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора ЈН 01/22 (28.02.2022.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о додели уговора ЈН 01/22 (21.03.2022.)  - <a href="#" class="link">линк</a></p></li>
 				</ul>
-				<div class="listTitle">*Plan Javne nabavke za 2022. (20.01.2021.) - <a href="#" class="link">link</a></div>
+				<div class="listTitle">*План Јавне Набавке за 2022. (20.01.2021.) - <a href="#" class="link">линк</a></div>
 
 			</div>
 			<div class="nabavka">
 				<div class="year">2021.</div>
-				<div class="listTitle">*IZVEŠTAJ O NABAVKAMA NA KOJE SE ZAKON NE PRIMENJUJE (30.12.2021.) - <a href="#" class="link">link</a></div>
-				<div class="listTitle">*JAVNA NABAVKA 04/21 – Nadogradnja sistema tehničke zaštite <a href="#" class="link">link</a></div>
+				<div class="listTitle">*ИЗВЕШТАЈ О НАБАВКАМА НА КОЈЕ СЕ ЗАКОН НЕ ПРИМЕЊУЈЕ (30.12.2021.) - <a href="#" class="link">линк</a></div>
+				<div class="listTitle">*ЈАВНА НАБАВКА 04/21 – Надоградња система техничке заштите <a href="#" class="link">линк</a></div>
 				<ul class="list">
-					<li><p>Javni poziv (09.09.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora JN 04/21 (22.09.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o dodeli ugovora JN 04/21 (27.09.2021.) - <a href="#" class="link">link</a></p></li>
+					<li><p>Јавни позив (09.09.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора ЈН 04/21 (22.09.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештенје о додели уговора ЈН 04/21 (27.09.2021.) - <a href="#" class="link">линк</a></p></li>
 				</ul>
-				<div class="listTitle">Izmena i dopuna Plana Javnih Nabavki za 2021. godinu (08.09.2021.)</div>
+				<div class="listTitle">Измена и допуна Плана Јавних Набавки за 2021.(08.09.2021.)</div>
 				<ul class="list">
-					<li><p>Javni poziv (01.07.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora JN 03/21 (27.07.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o dodeli ugovora (13.08.2021.) - <a href="#" class="link">link</a></p></li>
+					<li><p>Јавни позив (01.07.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора ЈН 03/21 (27.07.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о додели уговора (13.08.2021.) - <a href="#" class="link">линк</a></p></li>
 				</ul>
-				<div class="listTitle">*JAVNA NABAVKA 02/21 Usluga spasilačkog obezbeđenja kupača na bazenima</div>
+				<div class="listTitle">*ЈАВНА НАБАВКА 02/21 Услуга спасилачког обезбеђења купача на базенима</div>
 				<ul class="list">
-					<li><p>Javni poziv (27.01.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Ispravka obaveštenje o izmenama I dopunama (28.01.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Ispravka obaveštenje o izmenama I dopunama (05.02.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora JN 02/21 (10.02.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o dodeli ugovora (25.02.2021.) - <a href="#" class="link">link</a></p></li>
+					<li><p>Јавни позив (27.01.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Исправка обавештење о изменама и допунама (28.01.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Исправка обавештење о изменама и допунама (05.02.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора ЈН 02/21 (10.02.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о додели уговора (25.02.2021.) - <a href="#" class="link">линк</a></p></li>
 				</ul>
-				<div class="listTitle">*JAVNA NABAVKA 01/21 Hemijska sredstva  za dezinfekciju i održavanje bazenske vode</div>
+				<div class="listTitle">*ЈАВНА НАБАВКА 01/21 Хемијска средства за дезинфекцију и одржавање базенске воде</div>
 				<ul class="list">
-					<li><p>Javni poziv (26.01.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora JN 01/21 (09.02.2021.) - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o dodeli ugovora (25.02.2021.) - <a href="#" class="link">link</a></p></li>
+					<li><p>Јавни позив (26.01.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора ЈН JN 01/21 (09.02.2021.) - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о додели уговора (25.02.2021.) - <a href="#" class="link">линк</a></p></li>
 				</ul>
-				<div class="listTitle">*Plan Javne nabavke za 2021. (20.01.2021.) - <a href="#" class="link">link</a></div>
+				<div class="listTitle">*План Јавне набавке за 2021. (20.01.2021.) - <a href="#" class="link">линк</a></div>
 			</div>
 			<div class="nabavka">
 				<div class="year">2020.</div>
-				<div class="listTitle">*IZVEŠTAJ O NABAVKAMA NA KOJE SE ZAKON NE PRIMENJUJE (29.12.2020.) - <a href="#" class="link">link</a></div>
-				<div class="listTitle">*PRAVILNIK O JAVNIM NABAVKAMA - <a href="#" class="link">link</a></div>
-				<div class="listTitle">*JAVNA NABAVKA: Nabavka papirne galanterije</div>
+				<div class="listTitle">*ИЗВЕШТАЈ О НАБАВКАМА НА КОЈЕ СЕ ЗАКОН НЕ ПРИМЕЊУЈЕ (29.12.2020.) - <a href="#" class="link">линк</a></div>
+				<div class="listTitle">*ПРАВИЛНИК О ЈАВНИМ НАБАВКАМА - <a href="#" class="link">линк</a></div>
+				<div class="listTitle">*ЈАВНА НАБАВКА: Набавка папирне галантерије</div>
 				<ul class="list">
-					<li><p>Konkursna dokumentacija - <a href="#" class="link">link</a></p></li>
-					<li><p>Poziv za podnošenje ponude - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o zaključenom ugovoru - <a href="#" class="link">link</a></p></li>
+					<li><p>Конкурсна документација - <a href="#" class="link">линк</a></p></li>
+					<li><p>Позив за подношење  понуде - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о закљученом уговору - <a href="#" class="link">линк</a></p></li>
 				</ul>
 
-				<div class="listTitle">*JAVNA NABAVKA: Usluga spasilačkog obezbeđenja kupača na bazenima</div>
+				<div class="listTitle">*ЈАВНА НАБАВКА: Услуга спасилачког обезбеђења купача на базенима</div>
 				<ul class="list">
-					<li><p>Konkursna dokumentacija - <a href="#" class="link">link</a></p></li>
-					<li><p>Poziv za podnošenje ponude - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o zaključenom ugovoru - <a href="#" class="link">link</a></p></li>
+					<li><p>Конкурсна документација - <a href="#" class="link">линк</a></p></li>
+					<li><p>Позив за подношење понуде - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о закљученом уговору - <a href="#" class="link">линк</a></p></li>
 				</ul>
 
-				<div class="listTitle">*JAVNA NABAVKA: Hemijska sredstava za dezinfekciju i održavanje bazenske vode</div>
+				<div class="listTitle">*ЈАВНА НАБАВКА: Хемијска средства за дезинфекцију и одржавање базенске воде</div>
 				<ul class="list">
-					<li><p>Konkursna dokumentacija - <a href="#" class="link">link</a></p></li>
-					<li><p>Poziv za podnošenje ponude - <a href="#" class="link">link</a></p></li>
-					<li><p>Odluka o dodeli ugovora - <a href="#" class="link">link</a></p></li>
-					<li><p>Obaveštenje o zaključenom ugovoru - <a href="#" class="link">link</a></p></li>
+					<li><p>Конкурсна документација - <a href="#" class="link">линк</a></p></li>
+					<li><p>Позив за подношење понуде - <a href="#" class="link">линк</a></p></li>
+					<li><p>Одлука о додели уговора - <a href="#" class="link">линк</a></p></li>
+					<li><p>Обавештење о закљученом уговору - <a href="#" class="link">линк</a></p></li>
 				</ul>
 
 			</div>
