--- a/views/skolica-plivanja.ejs
+++ b/views/skolica-plivanja.ejs
@@ -1,20 +1,20 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/skolica.jpeg)"></div>
-	<div class="pageFixedTitle">ŠKOLICA PLIVANJA</div>
+	<div class="pageFixedTitle">ШКОЛИЦА ПЛИВАЊА</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
 	<div class="section white padded">
 		<div class="smallContent" style="text-align: center;">
-			"Skolica plivanja 25. maj" namenjena je deci uzrasta od 5 do 14 godina.<br>&nbsp;<br>Časovi plivanja održavaju se na malom bazenu (za neplivače), na kome temperatura vode iznosi 30°C.<br>&nbsp;<br>
+			"Школица пливања 25. мај" намењена је деци узраста од 5 до 14 година.<br>&nbsp;<br>Часови пливања одржавају се на малом базену (за непливаче), на коме температура воде износи 30°.<br>&nbsp;<br>
 		</div>
 		<div class="smallContent" style="text-align: left">
-			<div class="listTitle">Dimenzije bazena</div>
+			<div class="listTitle">Димензије базена</div>
 			<ul class="list">
-				<li><p>dužina - 12m</p></li>
-				<li><p>širina - 8m</p></li>
-				<li><p>dubina - 1,30m - 1,55m</p></li>
-				<li><p>plato za obuku neplivača - 0,55m</p></li>
+				<li><p>дужина - 12m</p></li>
+				<li><p>ширина - 8m</p></li>
+				<li><p>дубина - 1,30m - 1,55m</p></li>
+				<li><p>плато за обуку непливача - 0,55m</p></li>
 			</ul>
 		</div>
 	</div>
@@ -26,7 +26,7 @@
 			<div class="smallContent padded">
 				<div class="whiteBoxTransparent">
 					<div class="readingText">
-						Škola startuje 5. oktobra 2020. godine i održavaće se u sledećim terminima:<br>ponedeljak, sreda i petak<br>Prepodne 09-10h<br>Popodne 17-18h
+						Школа стартује 5. октобра 2020. године и одржаваће се у следећим терминима:<br>понедељак, среда и петаk<br>Преподне 09-10ч<br>Поподне 17-18ч
 					</div>
 				</div>
 			</div>
@@ -35,16 +35,16 @@
 
 	<div class="section grey padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">CENOVNIK</div>
+			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<div class="sideBySideText">
 				<div class="inline">
 					<div class="readingText">
-						Mesečna članarina (tri termina nedeljno) iznosi:<br>1. za jedno dete 5.000 dinara<br>2. za dvoje i više dece iz iste porodice odobrava se popust u iznosu od 2.000 dinara (mesečna cena članarine za drugo i svako naredno dete iz iste porodice iznosi 3000 dinara)
+						Месечна чланарина (три термина недељно) износи:<br>1. за једно дете 5.000 динара<br>2. за двоје и више деце из исте породице одобрава се попуст у износу од 2.000 динара (месечна цена чланарине за друго и свако наредно дете из исте породице износи 3000 динара)
 					</div>
 				</div>
 				<div class="inline">
 					<div class="readingText">
-						Mesečna članarina (dva termina nedeljno) iznosi:<br>1. za jedno dete 4.000 dinara<br>2. za dvoje i više dece iz iste porodice odobrava se popust u iznosu od 2.000 dinara (mesečna cena članarine za drugo i svako naredno dete iz iste porodice iznosi 2000 dinara)
+						Месечна чланарина (два термина недељно) износи:<br>1. за једно дете 4.000 динара<br>2. за двоје и више деце из исте породице одобрава се попуст у износу од 2.000 динара (месечна цена чланарине за друго и свако наредно дете из исте породице износи 2000 динара)
 
 					</div>
 				</div>
