--- a/views/zatvoreni-bazen.ejs
+++ b/views/zatvoreni-bazen.ejs
@@ -1,6 +1,6 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/zatvoreni-bazen.png)"></div>
-	<div class="pageFixedTitle">ZATVORENI BAZEN</div>
+	<div class="pageFixedTitle">ЗАТВОРЕНИ БАЗЕН</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
@@ -8,16 +8,16 @@
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
-					<div class="readingText">Dužine 50, širine 21 i dubine 2,1 metar, sa temperaturom od 26 stepeni u proseku, i ovaj bazen u celosti zadovoljava olimpijske standarde. Temperatura vazduha u dvorani održava se najsavremenijom klimatizacijom.</div>
+					<div class="readingText">Дужине 50, ширине 21 и дубине 2,1 метар, са температуром од 26 степени у просеку, и овај базен у целости задовољава олимпијске стандарде. Температура ваздуха у дворани одржава се најсавременијом климатизацијом.</div>
 				</div>
 				<div class="inline">
 					<div class="readingText">
-						<div>Građani mogu koristiti zatvoreni bazen u sledećim terminima:</div>
+						<div>Грађани могу користити затворени базен у следећим терминима:</div>
 						<table class="terminiTable">
 							<tr>
-								<td>Radni Dan</td>
-								<td>Subota</td>
-								<td>Nedelja</td>
+								<td>Радни Дан</td>
+								<td>Субота</td>
+								<td>Недеља</td>
 							</tr>
 							<tr>
 								<td>06:15 - 08:00</td>
@@ -48,7 +48,7 @@
 			<div class="smallContent padded">
 				<div class="whiteBoxTransparent">
 					<div class="readingText">
-						PRILIKOM KORIŠĆENJA ZATVORENOG BAZENA OBAVEZNO JE NOŠENJE ZAŠTITNE KAPICE ZA PLIVANJE! <br>Korisnici koji ne poseduju kapice, mogu ih kupiti uz dnevne karte.
+						ПРИЛИКОМ КОРИШЋЕЊА ЗАТВОРЕНОГ БАЗЕНА ОБАВЕЗНО ЈЕ НОШЕЊЕ ЗАШТИТНЕ КАПИЦЕ ЗА ПЛИВАЊЕ! <br>Корисници који не поседују капице, могу их купити уз дневне карте.
 					</div>
 				</div>
 			</div>
@@ -57,7 +57,7 @@
 
 	<div class="section white padded">
 		<div class="contentWidth">
-			<div class="sectionTitle">CENOVNIK</div>
+			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
 					<td>Zakup zatvorenog bazena - 1h koriscenja ceo bazen</td>
