--- a/views/kombo-paketi.ejs
+++ b/views/kombo-paketi.ejs
@@ -1,12 +1,12 @@
 <%- include ("partials/header") -%>
 	<div class="pageHeaderFixed" style="background-image: url(/images/kombo.jpg)"></div>
-	<div class="pageFixedTitle">КОМБО ПАКЕТИ</div>
+	<div class="pageFixedTitle"><i>COMBO</i> ПАКЕТИ</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
 	
 	<div class="section white padded">
 		<div class="smallContent" style="text-align: center;">
-			За потпуну рекреацију и релаксацију осмишљени су КОМБО пакети. Овај тип улазница вам омогућава приступ олимпијском базену, саунском блоку и теретани, у терминима које покрива пакет за који сте се одлучили.
+			За потпуну рекреацију и релаксацију осмишљени су <i>COMBO</i> пакети. Овај тип улазница вам омогућава приступ олимпијском базену, саунском блоку и теретани, у терминима које покрива пакет за који сте се одлучили.
 		</div>
 	</div>
 
@@ -15,28 +15,42 @@
 			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
-					<td>Zakup sale 1 sat, radnim danima od 08:00 do 12:00</td>
-					<td>3 200,00 din.</td>
+					<td>Combo Premium - Месечна карта - олимпијски базен и сауна, 30 термина</td>
+					<td>пакет услуга</td>
+					<td>10 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, radnim danima od 12:00 do 15:00 i nakon 23:00</td>
-					<td>2 500,00 din.</td>
+					<td>Combo Plus - Месечна карта - олимпијски базен и сауна, само радним данима</td>
+					<td>пакет услуга</td>
+					<td>7 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, radnim danima od 15:00 do 23:00 i vikendom od 08:00 - 22:00</td>
-					<td>4 500,00 din.</td>
+					<td>Combo economy - Месечна карта - олимпијски базен и сауна, само викендом</td>
+					<td>пакет услуга</td>
+					<td>7 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, subvencionisana cena</td>
-					<td>900,00 din.</td>
+					<td>Combo daily - Дневна карта - олимпијски базен и сауна (базен се користи у терминима за грађанство током радног времена сауне)</td>
+					<td>пакет услуга</td>
+					<td>1 100,00 дин.</td>
+				</tr>
+			</table>
+			<table class="priceTable" style="margin-top:20px;">
+				<tr>
+					<td><i>COMBO</i> GYM - затворени базен и теретана (30 термина) - сваким даном</td>
+					<td>8 500,00 din.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, termin za škole</td>
-					<td>3 165,00 din.</td>
+					<td><i>COMBO</i> economy GYM - затворени базен и теретана (30 термина) - сауна само викендом</td>
+					<td>11 000,00 din.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, vikendom od 22:00</td>
-					<td>2 500,00 din.</td>
+					<td><i>COMBO</i> plus GYM - затворени базен и теретана (30 термина) - сауна само радним данима</td>
+					<td>11 500,00 din.</td>
+				</tr>
+				<tr>
+					<td><i>COMBO</i> premium GYM - затворени базен, теретана и сауна - сваким даном</td>
+					<td>14 000,00 din.</td>
 				</tr>
 			</table>
 		</div>
