--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -34,29 +34,49 @@
 			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
-					<td>Spa premium - Mesečna karta za saunu i mali bazen - 30 termina</td>
-					<td>svim danima</td>
-					<td>6 500,00 din.</td>
+					<td>Spa premium - Месечна карта за сауну и мали базен - 30 термина</td>
+					<td>свим данима</td>
+					<td>6 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Spa plus - Mesečna karta za saunu i mali bazen - samo radnim danima</td>
-					<td>radnim danima</td>
-					<td>5 000,00 din.</td>
+					<td>Spa plus - Месечна карта за сауну и мали базен</td>
+					<td>радним данима</td>
+					<td>5 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Spa economy - Mesečna karta za saunu i mali bazen - samo vikendom</td>
-					<td>vikendom</td>
-					<td>4 500,00 din.</td>
+					<td>Spa economy - Месечна карта за сауну и мали базен</td>
+					<td>викендом</td>
+					<td>4 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Dnevna karta za saunu i mali bazen - radnim danima</td>
-					<td>radnim danima</td>
-					<td>1 000,00 din.</td>
+					<td>Дневна карта за сауну и мали базен</td>
+					<td>радним данима</td>
+					<td>1 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Dnevna karta za saunu i mali bazen - vikendom</td>
-					<td>vikendom</td>
-					<td>1 000,00 din.</td>
+					<td>Дневна карта за сауну и мали базен - викендом</td>
+					<td>викендом</td>
+					<td>1 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo Premium - Месечна карта - олимпијски базен и сауна, 30 термина</td>
+					<td>пакет услуга</td>
+					<td>10 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo Plus - Месечна карта - олимпијски базен и сауна, само радним данима</td>
+					<td>пакет услуга</td>
+					<td>7 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo economy - Месечна карта - олимпијски базен и сауна, само викендом</td>
+					<td>пакет услуга</td>
+					<td>7 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Combo daily - Дневна карта - олимпијски базен и сауна (базен се користи у терминима за грађанство током радног времена сауне)</td>
+					<td>пакет услуга</td>
+					<td>1 100,00 дин.</td>
 				</tr>
 			</table>
 		</div>
