--- a/views/sportska-sala.ejs
+++ b/views/sportska-sala.ejs
@@ -17,28 +17,28 @@
 			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
-					<td>Zakup sale 1 sat, radnim danima od 08:00 do 12:00</td>
-					<td>3 200,00 din.</td>
+					<td>Закуп сале 1 сат, радним данима од 08:00 дo 12:00</td>
+					<td>3 200,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, radnim danima od 12:00 do 15:00 i nakon 23:00</td>
-					<td>2 500,00 din.</td>
+					<td>Закуп сале 1 сат, радним данима од 12:00 дo 15:00 и након 23:00</td>
+					<td>2 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, radnim danima od 15:00 do 23:00 i vikendom od 08:00 - 22:00</td>
-					<td>4 500,00 din.</td>
+					<td>Закуп сале 1 сат, радним данима од 15:00 дo 23:00 и викендом од 08:00 - 22:00</td>
+					<td>4 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, subvencionisana cena</td>
-					<td>900,00 din.</td>
+					<td>Закуп сале 1 сат, субвенционисана цена</td>
+					<td>900,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, termin za škole</td>
-					<td>3 165,00 din.</td>
+					<td>Закуп сале 1 сат, термин за школе</td>
+					<td>3 165,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup sale 1 sat, vikendom od 22:00</td>
-					<td>2 500,00 din.</td>
+					<td>Закуп сале 1 сат, викендом од 22:00</td>
+					<td>2 500,00 дин.</td>
 				</tr>
 			</table>
 		</div>
