--- a/views/zatvoreni-bazen.ejs
+++ b/views/zatvoreni-bazen.ejs
@@ -60,19 +60,257 @@
 			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
-					<td>Zakup zatvorenog bazena - 1h koriscenja ceo bazen</td>
-					<td>svakim danom</td>
-					<td>16 000,00 din.</td>
+					<td>Закуп затвореног базена - 1ч коришћења цео базен</td>
+					<td>сваким даном</td>
+					<td>16 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup zatvorenog bazena - 1h koriscenja pola bazena</td>
-					<td>svakim danom</td>
-					<td>9 000,00 din.</td>
+					<td>Закуп затвореног базена - 1ч коришћења пола базена</td>
+					<td>сваким даном</td>
+					<td>9 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Zakup zatvorenog bazena - 1h koriscenja četvrtina bazena</td>
-					<td>svakim danom</td>
-					<td>5 000,00 din.</td>
+					<td>Закуп затвореног базена - 1ч коришћења четвртина базена</td>
+					<td>сваким даном</td>
+					<td>5 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп затвореног базена - 1ч коришћења осмина базена</td>
+					<td>сваким даном</td>
+					<td>3 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 5ч коришћења, домаће такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>100 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 5ч коришћења, међународно такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>150 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 3ч коришћења, међународно такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>99 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 1ч коришћења, званични тренинг - домаће такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>24 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 2ч коришћења, званични тренинг - домаће такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>46 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 1ч коришћења, званични тренинг - међународно такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>44 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 3ч коришћења, званични тренинг - домаће такмичење - ватерполо утакмице</td>
+					<td>сваки дан</td>
+					<td>66 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - цео дан коришћења, међунардно такмичење са публиком</td>
+					<td>сваки дан</td>
+					<td>420 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - цео дан коришћења, домаће такмичење са публиком</td>
+					<td>сваки дан</td>
+					<td>300 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - 1ч коришћења за снимања</td>
+					<td>сваки дан</td>
+					<td>35 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп платформе и малог базена - 1ч коришћења</td>
+					<td>сваки дан</td>
+					<td>6 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп термина - цео дан коришћења за организацију догађаја са додатним капацитетима</td>
+					<td>сваки дан</td>
+					<td>600 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп хидросаунског блока</td>
+					<td>цео дан</td>
+					<td>150 000,00 дин.</td>
+				</tr>
+			</table>
+
+
+			<table class="priceTable" style="margin-top:20px">
+				<tr>
+					<td>Дневна карта одрасли</td>
+					<td>сви термини</td>
+					<td>400,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта одрасли са капом - силикон моноколор</td>
+					<td>сви термини</td>
+					<td>860,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта одрасли са капом - силикон мултиколор</td>
+					<td>сви термини</td>
+					<td>1 010,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта одрасли са капом - силикон моноколор</td>
+					<td>сви термини</td>
+					<td>760,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта деца до 12 година</td>
+					<td>сви термини</td>
+					<td>250,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта деца до 12 година са капом - силикон јуниор</td>
+					<td>сви термини</td>
+					<td>600,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта деца до 12 година са капом - силикон</td>
+					<td>сви термини</td>
+					<td>510,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта особе са инвалидитетом</td>
+					<td>сви термини</td>
+					<td>200,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта особе са инвалидитетом са капом - силикон мултиколор</td>
+					<td>сви термини</td>
+					<td>850,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта особе са инвалидитетом са капом - силикон моноколор</td>
+					<td>сви термини</td>
+					<td>700,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта особе са инвалидитетом са капом - силикон полиестер</td>
+					<td>сви термини</td>
+					<td>600,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Породична карта родитеља и двоје деце до 12 година</td>
+					<td>викендом</td>
+					<td>600,00 дин.</td>
+				</tr>
+				<tr>
+					<td>”TRI PLUS” картица - ЗА ОДРАСЛЕ - попуст 25%</td>
+					<td>сви термини</td>
+					<td>250,00 дин.</td>
+				</tr>
+				<tr>
+					<td>”TRI PLUS” картица - ЗА ДЕЦУ ДО 12 ГОДИНА - попуст 25%</td>
+					<td>сви термини</td>
+					<td>190,00 дин.</td>
+				</tr>
+				<tr>
+					<td>”TRI PLUS” картица - ЗА ОСОБЕ СА ИНВАЛИДИТЕТОМ - попуст 25%</td>
+					<td>сви термини</td>
+					<td>150,00 дин.</td>
+				</tr>
+			</table>
+
+			
+			<table class="priceTable" style="margin-top:20px">
+				<tr>
+					<td>Репрограмибилна картица за пролаз</td>
+					<td>комад</td>
+					<td>150,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS дневна карта</td>
+					<td>сви темрини</td>
+					<td>320,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта - одрасли, 30 термина</td>
+					<td>рекр. пливање</td>
+					<td>4 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта - одрасли, 12 термина</td>
+					<td>рекр. пливање</td>
+					<td>3 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Сезонска карта - одрасли, од 15.09 до 31.05</td>
+					<td>рекр. пливање</td>
+					<td>25 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта - особе са инвалидитетом, 12 темрина</td>
+					<td>рекр. пливање</td>
+					<td>2 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта - ђачка и студентска, 12 темрина</td>
+					<td>рекр. пливање</td>
+					<td>2 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта - ђачка и студентска, 30 темрина</td>
+					<td>рекр. пливање</td>
+					<td>3 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Сезонска карта - ђачка и студентска, од 15.09 до 31.05</td>
+					<td>рекр. пливање</td>
+					<td>20 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Школа пливања - месечна чланарина за једно дете</td>
+					<td>3 термина недељно</td>
+					<td>5 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Школа пливања - месечна чланарина за друго и свако наредно дете из исте породице</td>
+					<td>3 термина недељно</td>
+					<td>3 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Школа пливања - месечна чланарина за једно дете</td>
+					<td>2 термина недељно</td>
+					<td>4 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Школа пливања - месечна чланарина за друго и свако наредно дете из исте породице</td>
+					<td>2 термина недељно</td>
+					<td>2 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Метрополитен факултет - дневна карта студенти</td>
+					<td>сви термини</td>
+					<td>180,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Метрополитен факултет - дневна карта запослени</td>
+					<td>сви термини</td>
+					<td>240,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта Метрополитен факултет - 30 термина, студенти</td>
+					<td>рекр. пливање</td>
+					<td>2 250,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта Метрополитен факултет - 30 термина, запослени</td>
+					<td>рекр. пливање</td>
+					<td>3 000,00 дин.</td>
 				</tr>
 			</table>
 		</div>
