--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,10 +25,15 @@
 		</div>
 	</div>
 
-	<div class="section">
+	<div class="section" style="position: relative;">
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
-		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
+		<div class="backgroundVideo">
+			<video poster="/videos/water2.jpg" autoplay playsinline muted loop>
+				<source src="/videos/water2.mp4" type="video/mp4">
+			</video>
+		</div>
+		<div class="videoBackground padded">
 			<div class="contentWidth">
 				<div class="sectionTitle">НАЈНОВИЈА ОБАВЕШТЕЊА</div>
 				<div class="obavestenja">
@@ -109,6 +114,7 @@
 			</div>
 		</div>
 	</div>
+
 
 	<div class="section white padded">
 		<div class="contentWidth">
