--- a/views/o-nama.ejs
+++ b/views/o-nama.ejs
@@ -3,7 +3,7 @@
 	<div class="pageFixedTitle">О НАМА</div>
 	<div class="pageHeaderSpace"></div>
 	<div class="bellowFixedHeader"></div>
-	<div class="section white">
+	<div class="section white" style="background-image: url(/logos/o-nama-logo.png);background-position: 95% 102%;background-size: 100px;background-repeat: no-repeat;">
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
@@ -40,7 +40,7 @@
         	<a href="https://www.google.com/maps/dir//Sports+and+Recreational+Center+%22Milan+Gale+Mu%C5%A1katirovi%C4%87%22,+Tadeu%C5%A1a+Ko%C5%A1%C4%87u%C5%A1ka+63,+Beograd+110000/@44.8293988,20.4513149,17.77z/data=!4m9!4m8!1m0!1m5!1m1!1s0x475a65374a579c6f:0x51c018508aaf5907!2m2!1d20.4539115!2d44.8299838!3e0" rel="external" target="_blank">НАВИГАЦИЈА</a>
         </div>
 	</div>
-	<div class="section grey padded">
+	<div class="section grey padded" style="background-color:rgb(231,234,237)">
 		<div class="smallContent" style="text-align:center">
 			<!--<div class="readingText">
 				Napravljen pre skoro pola veka za potrebe prvog Svetskog prvenstva u sportovima na vodi i nazvan 25. maj, ovaj centar ubrzo postaje simbol vere u sportski duh i omiljeno prestoničko mesto za rekreaciju. I to ostaje do današnjih dana.
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="section white">
+	<div class="section white" style="background-image: url(/logos/o-nama-logo.png);background-position: 5% 0%;background-size: 100px;background-repeat: no-repeat;">
 		<div class="contentWidth">
 			<div class="sideBySideText">
 				<div class="inline">
@@ -68,10 +68,16 @@
 			</div>
 		</div>
 	</div>
-	<div class="section">
+
+	<div class="section" style="position: relative;">
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
-		<div class="imageBackground padded" style="background-image: url(/images/voda.jpg);">
+		<div class="backgroundVideo">
+			<video poster="/videos/water2.jpg" autoplay playsinline muted loop>
+				<source src="/videos/water2.mp4" type="video/mp4">
+			</video>
+		</div>
+		<div class="videoBackground padded">
 			<div class="smallContent padded">
 				<div class="whiteBoxTransparent">
 					<!--<div class="readingText">
