--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -50,7 +50,7 @@
 			<div class="menu">
 				<div class="menuItemWrap">
 					<div class="item" onclick="responsiveOpener(this)">
-						<div class="text">Насловна</div>
+						<div class="text" style="width:75px;text-align: center;">Главно</div>
 						<div class="carret">
 							<img class="whiteIcon" src="/icons/carret.png">
 							<img class="colored" src="/icons/carret-blue.png">
