--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 		<div class="topFade"></div>
 		<div class="bottomFade"></div>
 		<div class="backgroundVideo">
-			<video poster="/videos/water2.jpg" autoplay playsinline muted loop>
+			<video poster="/videos/water2.jpg" autoplay loop muted playsinline src="/videos/water2.mp4">
 				<source src="/videos/water2.mp4" type="video/mp4">
 			</video>
 		</div>
