--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -95,8 +95,8 @@
 						<div class="separator"></div>
 						<div class="subMenuItem"><a href="/sportska-sala">Спортска Сала</a></div>
 						<div class="separator"></div>
-						<div class="subMenuItem"><a href="/kombo-paketi">Комбо пакети</a></div>
-						<div class="separator"></div>
+						<!--<div class="subMenuItem"><a href="/kombo-paketi">Комбо пакети</a></div>
+						<div class="separator"></div>-->
 						<div class="subMenuItem"><a href="/skolica-plivanja">Школица пливања</a></div>
 						<div class="separator"></div>
 					</div>
