--- a/views/sportska-sala.ejs
+++ b/views/sportska-sala.ejs
@@ -8,7 +8,7 @@
 		<div class="smallContent" style="text-align: center;">
 			Посетиоцима и корисницима услуга центра на располагању је и спортска сала опремљена по највишим стандардима и погодна како за спортске активности и припреме професионалних спортиста, тако и за рекреативне активности.<br>
 ОД 05 МАЈА 2020. ГОДИНЕ, СПРОТСКА САЛА У ОКВИРУ СРПЦ 25. МАЈ РАДИ ДО 22 ЧАСА.<br>
-Контакт телефон: <a href="">062/887-5704</a>
+Контакт телефон: <a href="tel:+381628875704">062/887-5704</a>
 		</div>
 	</div>
 
@@ -17,28 +17,44 @@
 			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
-					<td>Закуп сале 1 сат, радним данима од 08:00 дo 12:00</td>
+					<td>Закуп сале 1 сат коришћења од 08.00–12.00 часова</td>
+					<td>радним данима</td>
 					<td>3 200,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп сале 1 сат, радним данима од 12:00 дo 15:00 и након 23:00</td>
+					<td>Закуп сале 1 сат коришћења од 12.00–15.00 часова </td>
+					<td>радним данима</td>
 					<td>2 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп сале 1 сат, радним данима од 15:00 дo 23:00 и викендом од 08:00 - 22:00</td>
+					<td>Закуп сале 1 сат коришћења од 15.00 - 23.00 часа</td>
+					<td>радним данима</td>
 					<td>4 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп сале 1 сат, субвенционисана цена</td>
+					<td>Закуп сале 1 сат коришћења од 23.00 часа</td>
+					<td>радним данима</td>
+					<td>2 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп сале 1 сат коришћења од 08.00 - 22.00 часа</td>
+					<td>викендом</td>
+					<td>4 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп сале 1 сат коришћења од 22.00 часа</td>
+					<td>викендом </td>
+					<td>2 500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Закуп сале 1 сат коришћења</td>
+					<td>субвенционисана цена</td>
 					<td>900,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Закуп сале 1 сат, термин за школе</td>
+					<td>Закуп сале 1 сат коришћења</td>
+					<td>термин за школе</td>
 					<td>3 165,00 дин.</td>
-				</tr>
-				<tr>
-					<td>Закуп сале 1 сат, викендом од 22:00</td>
-					<td>2 500,00 дин.</td>
 				</tr>
 			</table>
 		</div>
