--- a/views/wellness-centar.ejs
+++ b/views/wellness-centar.ejs
@@ -34,26 +34,26 @@
 			<div class="sectionTitle">ЦЕНОВНИК</div>
 			<table class="priceTable">
 				<tr>
-					<td>Spa premium - Месечна карта за сауну и мали базен - 30 термина</td>
+					<td>Дневна карта за сауну и мали базен (одрасли и деца старија од 4 године)</td>
+					<td>свим данима</td>
+					<td>1 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Spa premium – месечна карта за сауну и мали базен ( 30 термина )</td>
 					<td>свим данима</td>
 					<td>6 500,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Spa plus - Месечна карта за сауну и мали базен</td>
+					<td>Spa plus – месечна карта за сауну и мали базен ( 23 термина ) </td>
 					<td>радним данима</td>
 					<td>5 000,00 дин.</td>
 				</tr>
 				<tr>
-					<td>Spa economy - Месечна карта за сауну и мали базен</td>
-					<td>викендом</td>
+					<td>Spa economy – месечна карта за сауну и мали базен ( 12 термина )</td>
+					<td>викендом </td>
 					<td>4 500,00 дин.</td>
 				</tr>
-				<tr>
-					<td>Дневна карта за сауну и мали базен</td>
-					<td>радним данима</td>
-					<td>1 000,00 дин.</td>
-				</tr>
-				<tr>
+				<!--<tr>
 					<td>Дневна карта за сауну и мали базен - викендом</td>
 					<td>викендом</td>
 					<td>1 000,00 дин.</td>
@@ -77,7 +77,7 @@
 					<td>Combo daily - Дневна карта - олимпијски базен и сауна (базен се користи у терминима за грађанство током радног времена сауне)</td>
 					<td>пакет услуга</td>
 					<td>1 100,00 дин.</td>
-				</tr>
+				</tr>-->
 			</table>
 		</div>
 	</div>
