--- a/views/bazeni-na-otvorenom.ejs
+++ b/views/bazeni-na-otvorenom.ejs
@@ -20,7 +20,7 @@
 	<div class="section grey padded">
 		<div class="contentWidth">
 			<div class="sectionTitle">ЦЕНОВНИК</div>
-			<table class="priceTable">
+			<!--<table class="priceTable">
 				<tr>
 					<td>Дневна карта одрасли - Радни дан</td>
 					<td>целодневна</td>
@@ -210,6 +210,168 @@
 					<td>Подела рекламних флајера на благајни базена 10 000 комада</td>
 					<td>дневно</td>
 					<td>10 600,00 дин.</td>
+				</tr>
+			</table>-->
+			<table class="priceTable">
+				<tr>
+					<td>Дневна карта одрасли – свим данима</td>
+					<td>целодневна</td>
+					<td>450,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта одрасли – свим данима</td>
+					<td>после 16 часова</td>
+					<td>300,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта деца од 5 до 12 година -  свим данима</td>
+					<td>целодневна</td>
+					<td>200,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта пензионери - свим данима</td>
+					<td>целодневна</td>
+					<td>300,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта особе са инвалидитетом -  свим данима</td>
+					<td>целодневна</td>
+					<td>200,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта труднице – свим данима</td>
+					<td>целодневна</td>
+					<td>350,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Дневна карта труднице – свим данима</td>
+					<td>после 16 часова</td>
+					<td>250,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Породична карта  ( родитељи са једним или двоје деце до 12 година )</td>
+					<td>целодневна</td>
+					<td>850,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Појединачна карта - одрасли </td>
+					<td>ноћно купање</td>
+					<td>500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Месечна карта – одрасли (30 термина)</td>
+					<td>целодневна</td>
+					<td>7 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Сезонска карта одрасли</td>
+					<td>целодневна</td>
+					<td>11 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS одрасли - радни дан</td>
+					<td>целодневна</td>
+					<td>310,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS одрасли - радни дан</td>
+					<td>полудневна</td>
+					<td>220,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS породична - ( родитељи са једним или двоје деце до 12 година )</td>
+					<td>целодневна</td>
+					<td>720,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS пензионери - свима данима</td>
+					<td>целодневна</td>
+					<td>220,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS деца од 5 до 12 година - свим данима</td>
+					<td>целодневна</td>
+					<td>130,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS одрасли - викенд</td>
+					<td>целодневна</td>
+					<td>360,00 дин.</td>
+				</tr>
+				<tr>
+					<td>CITY PASS одрасли - викенд</td>
+					<td>полудневна</td>
+					<td>270,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Деца млађа од 5 година</td>
+					<td>бесплатно</td>
+					<td>бесплатно</td>
+				</tr>
+				<tr>
+					<td>Изнајмљивање сунцобрана </td>
+					<td>дневно</td>
+					<td>250,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Изнајмљивање лежаљке </td>
+					<td>дневно</td>
+					<td>250,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Изнајмљивање лежаљке испод перголе </td>
+					<td>дневно</td>
+					<td>300,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Комплет сунцобран и две лежаљке </td>
+					<td>дневно</td>
+					<td>500,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Промоције са промотеркама радним даном  до 16.00 ч</td>
+					<td>радни дан</td>
+					<td>4.000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Промоције са промотеркама викендом до 16.00 ч</td>
+					<td>викенд</td>
+					<td>5 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Постављање промо пулта са промотеркама радним даном до 18.00 ч</td>
+					<td>радни дан</td>
+					<td>5 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Постављање промо пулта са промотеркама викендом до 18.00 ч</td>
+					<td>викенд</td>
+					<td>6 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Подела рекламних флајера на благајни базена  до 5000 комада</td>
+					<td>дневно</td>
+					<td>5 880,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Подела рекламних флајера на благајни базена 10 000 комада</td>
+					<td>дневно</td>
+					<td>10 600,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Постављање промо пулта са промотеркама (плато – «дунавска страна) од 07.00 до 19.00 ч</td>
+					<td>радни дан </td>
+					<td>10 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Постављање промо пулта са промотеркама (плато - «дунавска страна) од 07.00 до 19.00 ч</td>
+					<td>викенд</td>
+					<td>12 000,00 дин.</td>
+				</tr>
+				<tr>
+					<td>Постављање промо пулта са промотеркама (плато- «дунавска страна) </td>
+					<td>месечно</td>
+					<td>270 000,00 дин.</td>
 				</tr>
 			</table>
 		</div>
